bugfix on chart ingestion

--- a/EX_train_sym_model_(DDC).ipynb
+++ b/EX_train_sym_model_(DDC).ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generatorify_from_fp_list(dataset_fp_list, memlen = 7, aud_memlen = 7, batch_size = 50, mem_size = 50000, shuffle = False, bidirectional_audio = True):\n",
+    "def generatorify_from_fp_list(dataset_fp_list, memlen = 7, batch_size = 50, mem_size = 50000, shuffle = False, bidirectional_audio = True):\n",
     "    random.shuffle(dataset_fp_list)\n",
     "    def _gener():\n",
     "        k = 0\n",
@@ -57,7 +57,9 @@
     "        while True:\n",
     "            while hopper < mem_size:     \n",
     "                with open(dataset_fp_list[k], 'rb') as f:\n",
-    "                    charts = pickle.load(f)\n",
+    "                    loaded = pickle.load(f)\n",
+    "                charts, _ = loaded[0], loaded[1]\n",
+    "                del(loaded)\n",
     "                k = (k + 1) % (len(dataset_fp_list) - 1)\n",
     "                for chart in charts:\n",
     "                    newsong = [[a[0] for a in chart], [a[1] for a in chart], [a[1] for a in chart]]\n",
@@ -95,7 +97,7 @@
     "                success_take += 1\n",
     "                i += 1\n",
     "            sd, lb = np.array(sd), np.array(lb)\n",
-    "            #print(lb)\n",
+    "            \n",
     "            for j in range(3):\n",
     "                song[j] = song[j][int(batch_size + miss_take):]\n",
     "            hopper -= batch_size\n",
