remove old code

--- a/EX_train_onset_model_(DDC).ipynb
+++ b/EX_train_onset_model_(DDC).ipynb
@@ -60,18 +60,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def null_attach(song, song_feats, chart, note_hist, note, next_note, null_frames):\n",
-    "    for j in range(null_frames):\n",
-    "        for i in range(len(note_hist)-1):\n",
-    "            note_hist[i] = note_hist[i+1]\n",
-    "        new_time = next_note[2]*((j+1)/(null_frames+1))+note[2]*((null_frames-j)/(null_frames+1))\n",
-    "        note_hist[-1] = make_onset_feature_context(song_feats, int(new_time*100), radius = context_radius)\n",
-    "        song[0] += [note_hist]\n",
-    "        song[2].append([0])\n",
-    "        song[1].append([[diff_dict[chart['difficulty_coarse']]] for _ in range(100)])\n",
-    "        return song, note_hist\n",
-    "    \n",
-    "\n",
     "def generatorify_from_fp_list(dataset_fp, \n",
     "                              memlen = 100, \n",
     "                              batch_size = 50, \n",
@@ -135,8 +123,6 @@
     "                \n",
     "            assert len(song[0])>5*batch_size\n",
     "\n",
-    "            success_take = 0\n",
-    "            miss_take = 0\n",
     "            ac = []\n",
     "            sd = []\n",
     "            lb = []\n",
@@ -250,7 +236,8 @@
     "    monitor='val_auc',\n",
     "    patience=20,\n",
     "    restore_best_weights=True,\n",
-    "    mode = 'max'\n",
+    "    mode = 'max',\n",
+    "    start_from_epoch = 100\n",
     ")\n",
     "\n",
     "model.fit(train_gen, \n",
