Small fixes and move existing models to old models

--- a/EX_train_onset_model_(DDC).ipynb
+++ b/EX_train_onset_model_(DDC).ipynb
@@ -39,7 +39,7 @@
     "mem_size = 2500\n",
     "load_checkpoint = False\n",
     "name_from_fp = lambda x: os.path.splitext(os.path.split(x)[1])[0]\n",
-    "model_dir = 'trained_models'\n",
+    "model_dir = 'old_trained_models'\n",
     "train_txt_fp = 'json/songs/songs_train.txt'\n",
     "test_txt_fp = 'json/songs/songs_test.txt'\n",
     "feats_dir = 'feats/songs'\n",
