--- a/EX_train_sym_model_(DDC).ipynb
+++ b/EX_train_sym_model_(DDC).ipynb
@@ -35,7 +35,7 @@
     "narrow_types = 4\n",
     "train_txt_fp = 'sym/songs/songs_train.txt'\n",
     "test_txt_fp = 'sym/songs/songs_test.txt'\n",
-    "model_dir = 'trained_models'\n",
+    "model_dir = 'old_trained_models'\n",
     "load_checkpoint = False\n",
     "if not os.path.isdir(model_dir):\n",
     "    os.makedirs(model_dir)"
